force-app/main/default/objects/Loan__c/fields/Core_System_Ref__c.field-meta.xml
<CustomField>
    <fullName>Core_System_Ref__c</fullName>
    <description>Confirmation number returned by the core system when sync succeeds. Extracted from the JSON response (confirmations[*].confirmation_number). Empty for sync-pending or plain-text responses.</description>
    <externalId>true</externalId>
    <label>Core System Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>