force-app/main/default/objects/Loan__c/fields/isSynced__c.field-meta.xml
<CustomField>
    <fullName>isSynced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true after the core-system sync callout returns HTTP 200. False means the Loan has not yet been confirmed by the core system.</description>
    <label>Is Synced</label>
    <type>Checkbox</type>
</CustomField>