force-app/main/default/objects/Loan__c/fields/Last_Sync_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Attempt__c</fullName>
    <description>Timestamp of the most recent sync attempt (success OR failure).</description>
    <label>Last Sync Attempt</label>
    <type>DateTime</type>
</CustomField>