force-app/main/default/objects/Loan__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Principal loan amount, copied from Opportunity.Amount at Closed Won time.</description>
    <label>Loan Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>