force-app/main/default/objects/Loan__c/fields/Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payments__c</fullName>
    <description>Loan_Amount divided by Term_In_Months. Calculated at Loan creation time and stored (not a formula) so the value is always bulk-safe and addressable for reporting.</description>
    <label>Monthly Payments</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>