force-app/main/default/objects/Loan__c/fields/PutsReq_Inspect_Link__c.field-meta.xml
<CustomField>
    <fullName>PutsReq_Inspect_Link__c</fullName>
    <description>Clickable link to the PutsReq inspect page of the core-system test endpoint. Shortcut for verifying the outbound callout sent when this Loan was created.</description>
    <formula>HYPERLINK("https://putsreq.com/y1FQESg0aesG5ycLqVXu/inspect", "View in PutsReq (Inspect)", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PutsReq Inspect</label>
    <type>Text</type>
</CustomField>