force-app/main/default/objects/Loan__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of failed sync attempts. Resets to 0 on success. Loans above 5 are considered manually-actionable and are skipped by the retry scheduler.</description>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>