force-app/main/default/objects/Loan__c/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <description>Latest sync error message, if any. Cleared when a retry succeeds.</description>
    <label>Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>