force-app/main/default/objects/Loan__c/fields/Term_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_In_Months__c</fullName>
    <description>Loan term in months, copied from Opportunity.Term_In_Months__c.</description>
    <label>Term (Number of Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>